--- a/src/style.css
+++ b/src/style.css
@@ -20,22 +20,22 @@ header {
   background: linear-gradient(45deg, rgb(105 139 133), transparent);
   display: flex;
   flex-direction: row;
-  align-items:center;
+  align-items: center;
 }
 #my-picture {
   padding: 5px;
   width: 108px;
   height: 108px;
 }
-header img { /* this targets all the images in the header (theres only one) */
+header img {
+  /* this targets all the images in the header (theres only one) */
   border-radius: 50%;
   margin: 4px;
-  background-color: #0000006e;;
-
+  background-color: #0000006e;
 }
 #header-info {
   padding: 10px;
-    text-shadow: 1px 1px 2px #ded7d7;
+  text-shadow: 1px 1px 2px #ded7d7;
 }
 
 h1 {
@@ -46,7 +46,7 @@ h2 {
   color: rgb(37, 70, 73);
   margin: 5px 0;
   font-weight: 100;
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 .tbar {
   margin-bottom: 10px;
@@ -54,11 +54,11 @@ h2 {
   align-items: stretch;
 }
 .tfill {
-  flex: 1; 
+  flex: 1;
   /* will take as much space as it needs */
 }
 .tbar label {
-    padding: 0 5px;
+  padding: 0 5px;
 }
 #teamsTable {
   width: 100%;
@@ -71,14 +71,14 @@ h2 {
 }
 
 #teamsTable th {
-  background-color: rgb(114, 176, 137); 
-  color: rgb(37, 70, 73)
+  background-color: rgb(114, 176, 137);
+  color: rgb(37, 70, 73);
 }
 #teamsTable tr:nth-child(even) {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 #teamsTable tr:nth-child(odd) {
-    background-color: #e1e7dc;
+  background-color: #e1e7dc;
 }
 #teamsTable input {
   width: 100%;
@@ -88,7 +88,7 @@ h2 {
 }
 
 #teamsTable tfoot input:not([type="image" i]) {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .table-actions {
@@ -98,11 +98,11 @@ h2 {
   cursor: pointer;
   min-width: 34px;
 }
-.edit-btn { 
-  display:none;
+.edit-btn {
+  display: none;
 }
-.delete-btn { 
-  display:none;
+.delete-btn {
+  display: none;
 }
 #teamsTable tr:hover .action-btn {
   display: inline-block;
@@ -112,4 +112,44 @@ footer {
   color: white;
   text-align: center;
   padding: 7px;
+}
+.loading-mask {
+  position: relative;
+}
+.loading-mask::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #00000040;
+  /* rgba(0, 0, 0, 0.25) */
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+.loading-mask::after {
+  content: "🌷";
+  text-align: center;
+  /* content: ""; */
+
+  position: absolute;
+  border-width: 3px;
+  border-style: solid;
+  border-color: transparent #fff #fff;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  top: calc(50% - 12px);
+  left: calc(50% - 12px);
+  animation: 2s linear 0s normal none infinite running spin;
+  filter: drop-shadow(0 0 2 rgba(0, 0, 0, 0.33));
+  line-height: initial;
+  font-size: initial;
 }
